# CooKin

./: README.md  pyproject.toml
src/api/: main.py  router.py
src/cli/: main.py
src/services/: exc.py  meteo.py  recipe.py  utils.py  weather.py
tests/: conftest.py  test_recipe.py
